--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
   </head>
   <body>
+  <div>
     Aqui vai o código HTML que fará seu site aparecer.
+  </div>
   </body>
 </html>
